2005-11-29 03:06  karl

	* trunk/icecast/src/auth_url.c: update for authentication header
	  via libcurl. allows for http://user:pass@host.. else the param
	  specified user/pass. In the case of listener_add/remove use the
	  client provided user/pass if no others are specified.

2005-11-20 13:53  karl

	* trunk/icecast/src/source.c: allow for the intro file to change
	  over HUP

2005-11-17 00:54  karl

	* trunk/icecast/src/auth.c, trunk/icecast/src/client.c,
	  trunk/icecast/src/client.h, trunk/icecast/src/connection.c:
	  change status code for server/stream full cases (#738), also
	  some others places where connections are terminated.

2005-11-15 00:36  karl

	* trunk/icecast/src/stats.c: update queue handling for stats. This
	  was slow when many stats were being queued. These apply to both
	  web interface requests and stats clients.

2005-11-15 00:29  karl

	* trunk/icecast/src/format_vorbis.c: fixup granulepos on EOS case
	  when rebuilding vorbis streams. This was causing a short audio
	  glitch on playback, but was not typically noticed.

2005-10-24 14:51  oddsock

	* trunk/icecast/conf/icecast.xml.in,
	  trunk/icecast/doc/icecast2_config_file.html,
	  trunk/icecast/src/cfgfile.c, trunk/icecast/src/cfgfile.h,
	  trunk/icecast/src/logging.c, trunk/icecast/src/main.c: 2 new
	  features to icecast logging: - logsize : specify in KB the max
	  size of any of icecast log files - logarchive : causes icecast
	  to rename logs with timestamps (for proper archiving)

2005-10-11 13:40  karl

	* trunk/icecast/src/cfgfile.c: avoid adding a mount_t structure if
	  there is no mount name defined, segv occurs later on

2005-10-06 02:41  karl

	* trunk/icecast/src/client.c: fix bug #717. a race on source exit
	  could cause memory corruption

2005-10-01 15:59  msmith

	* trunk/icecast/admin/manageauth.xsl: Don't display passwords in
	  auth management interface; it's useless and shouldn't be
	  displayed anyway.

2005-10-01 14:08  karl
